--- a/calculator/calculator/MainPage.xaml
+++ b/calculator/calculator/MainPage.xaml
@@ -3,22 +3,40 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="calculator.MainPage">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-    </StackLayout>
+    <Grid BackgroundColor="Black">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Entry x:Name="rez" Text="0" TextColor="White" IsReadOnly="True" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" HorizontalTextAlignment="End"/>
+        <Button x:Name="k1" Padding="0,0,104,0" Text="ac" CornerRadius="100" TextColor="Black" BackgroundColor="Gray" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2"/>
+        <Button x:Name="k3" Text="c" CornerRadius="50" TextColor="Black" BackgroundColor="Gray" Grid.Column="2" Grid.Row="1"/>
+        <Button x:Name="k4" Text="/" CornerRadius="50" TextColor="White" BackgroundColor="Orange" Grid.Column="3" Grid.Row="1"/>
+        <Button x:Name="k5" Text="7" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="0" Grid.Row="2"/>
+        <Button x:Name="k6" Text="8" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="1" Grid.Row="2"/>
+        <Button x:Name="k7" Text="9" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="2" Grid.Row="2"/>
+        <Button x:Name="k8" Text="*" CornerRadius="50" TextColor="White" BackgroundColor="Orange" Grid.Column="3" Grid.Row="2"/>
+        <Button x:Name="k9" Text="4" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="0" Grid.Row="3"/>
+        <Button x:Name="k10" Text="5" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="1" Grid.Row="3"/>
+        <Button x:Name="k11" Text="6" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="2" Grid.Row="3"/>
+        <Button x:Name="k12" Text="-" CornerRadius="50" TextColor="White" BackgroundColor="Orange" Grid.Column="3" Grid.Row="3"/>
+        <Button x:Name="k13" Text="1" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="0" Grid.Row="4"/>
+        <Button x:Name="k14" Text="2" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="1" Grid.Row="4"/>
+        <Button x:Name="k15" Text="3" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="2" Grid.Row="4"/>
+        <Button x:Name="k16" Text="+" CornerRadius="50" TextColor="White" BackgroundColor="Orange" Grid.Column="3" Grid.Row="4"/>
+        <Button x:Name="k17" Text="0" CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2"/>
+        <Button x:Name="k19" Text="." CornerRadius="50" TextColor="White" BackgroundColor="#2C2C2C" Grid.Column="2" Grid.Row="5"/>
+        <Button x:Name="k20" Text="=" CornerRadius="50" TextColor="White" BackgroundColor="Orange" Grid.Column="3" Grid.Row="5"/>
+    </Grid>
 
 </ContentPage>
